crypto/cnxk: add PMD APIs for raw submission to CPT
Add PMD APIs to allow applications to directly submit CPT instructions
to hardware.

Signed-off-by: Anoob Joseph <anoobj@marvell.com>
Change-Id: I0d4dfaa22d674d2a2a161d8ea7248f8b609bbb3b
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/116742
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/117468

--- a/drivers/crypto/cnxk/meson.build
+++ b/drivers/crypto/cnxk/meson.build
@@ -24,8 +24,8 @@ sources = files(
         'cnxk_cryptodev_sec.c',
 )
 
+headers = files('rte_pmd_cnxk_crypto.h')
 deps += ['bus_pci', 'common_cnxk', 'security', 'eventdev']
-
 includes += include_directories('../../../lib/net', '../../event/cnxk')
 
 if get_option('buildtype').contains('debug')
