marvell-ci: add CPT raw tests
Add tests for CPT RAW API. Adding performance test cases.

Signed-off-by: Anoob Joseph <anoobj@marvell.com>
Change-Id: Ia63bcaddcaeca657f9e6746e1c3bbab80ddc5e9f
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/118317
Reviewed-by: Vidya Sagar Velumuri <vvelumuri@marvell.com>

--- a/marvell-ci/test/cnxk-tests/meson.build
+++ b/marvell-ci/test/cnxk-tests/meson.build
@@ -103,6 +103,7 @@ test_subdirs_arm = [
         'policer_test',
         'flow_aging',
         'l3fwd_non_eal',
+        'cpt_raw_test',
 ]
 
 test_subdirs_x86 = [
