cnxk-tests: update dependencies
The dependency handling for files have changed in 23.11.
Update dependencies for cnxk-tests accordingly.

Signed-off-by: Ashwin Sekhar T K <asekhar@marvell.com>
Change-Id: Ic067ff676cb0b4ed3e1fc0d05eec20aa4701ac0f
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/117185
Reviewed-by: Jerin Jacob Kollanukkaran <jerinj@marvell.com>
Tested-by: Jerin Jacob Kollanukkaran <jerinj@marvell.com>

--- a/marvell-ci/test/cnxk-tests/bphy_irq/meson.build
+++ b/marvell-ci/test/cnxk-tests/bphy_irq/meson.build
@@ -24,7 +24,7 @@ bphy_irq_test=executable(
     test_exec,
     files('bphy_irq.c'),
     link_whole: link_libs,
-    dependencies: test_dep_objs,
+    dependencies: cnxk_test_dep_objs,
     c_args: cflags,
     install_dir: 'bin/cnxk/bphy_irq',
     install: true
