--- a/marvell-ci/test/cnxk-tests/extbuf/meson.build
+++ b/marvell-ci/test/cnxk-tests/extbuf/meson.build
@@ -24,7 +24,7 @@ extbuf_test=executable(
     test_exec,
     files('extbuf.c'),
     link_whole: link_libs,
-    dependencies: test_dep_objs,
+    dependencies: cnxk_test_dep_objs,
     c_args: cflags,
     install_dir: 'bin/cnxk/extbuf',
     install: true
