--- a/marvell-ci/test/cnxk-tests/mbuf_perf/meson.build
+++ b/marvell-ci/test/cnxk-tests/mbuf_perf/meson.build
@@ -15,7 +15,7 @@ mbuf_perf_test=executable(
     test_exec,
     files('mbuf_perf.c'),
     link_whole: link_libs,
-    dependencies: test_dep_objs,
+    dependencies: cnxk_test_dep_objs,
     c_args: cflags,
     install_dir: 'bin/cnxk/mbuf_perf',
     install: true,
