--- a/doc/guides/nics/features/cnxk.ini
+++ b/doc/guides/nics/features/cnxk.ini
@@ -72,6 +72,7 @@ mark                 = Y
 mpls                 = Y
 nvgre                = Y
 raw                  = Y
+represented_port     = Y
 sctp                 = Y
 tcp                  = Y
 tx_queue             = Y
