net/cnxk: add representor control plane
Implementing the control path for representor ports, where represented
ports can be configured using TLV messaging.

Change-Id: I74061a8d2f72541ad62d7185bec8b137a6542140
Signed-off-by: Harman Kalra <hkalra@marvell.com>

--- a/drivers/net/cnxk/meson.build
+++ b/drivers/net/cnxk/meson.build
@@ -37,6 +37,7 @@ sources = files(
         'cnxk_ptp.c',
         'cnxk_flow.c',
         'cnxk_rep.c',
+        'cnxk_rep_msg.c',
         'cnxk_rep_ops.c',
         'cnxk_stats.c',
         'cnxk_tm.c',
