net/cnxk: support PPPoE flow item type
Support to parse RTE_FLOW_ITEM_TYPE_PPPOES rte_flow item
type for cnxk device.

Signed-off-by: Satheesh Paul <psatheesh@marvell.com>
Change-Id: Icd326654743a1cc7d1224aa396120ba920438d97
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/118151
Tested-by: Jerin Jacob Kollanukkaran <jerinj@marvell.com>
Reviewed-by: Kiran Kumar Kokkilagadda <kirankumark@marvell.com>

--- a/doc/guides/nics/features/cnxk_vec.ini
+++ b/doc/guides/nics/features/cnxk_vec.ini
@@ -65,6 +65,7 @@ ipv6_frag_ext        = Y
 mark                 = Y
 mpls                 = Y
 nvgre                = Y
+pppoes               = Y
 raw                  = Y
 sctp                 = Y
 tcp                  = Y
