--- a/drivers/net/cnxk/meson.build
+++ b/drivers/net/cnxk/meson.build
@@ -29,6 +29,7 @@ sources = files(
         'cnxk_ethdev_telemetry.c',
         'cnxk_ethdev_sec_telemetry.c',
         'cnxk_eswitch.c',
+        'cnxk_eswitch_devargs.c',
         'cnxk_link.c',
         'cnxk_lookup.c',
         'cnxk_ptp.c',
