net/cnxk: eswitch flow configurations
Adding flow rules for eswitch PF and VF and implementing
interfaces to delete, shift flow rules

Change-Id: I0d9647eb050ca2397ab7f0cc9e2a05b84824c9a6
Signed-off-by: Harman Kalra <hkalra@marvell.com>

--- a/drivers/net/cnxk/meson.build
+++ b/drivers/net/cnxk/meson.build
@@ -30,6 +30,7 @@ sources = files(
         'cnxk_ethdev_sec_telemetry.c',
         'cnxk_eswitch.c',
         'cnxk_eswitch_devargs.c',
+        'cnxk_eswitch_flow.c',
         'cnxk_link.c',
         'cnxk_lookup.c',
         'cnxk_ptp.c',
