marvell-ci: sync 23.11 with 22.11
All functional and perf tests must be aligned between 22.11 and 23.11.
Patch syncs 23.11 with 22.11 tests.

Signed-off-by: Sunil Kumar Kori <skori@marvell.com>
Change-Id: Ie20c266e38e8e017186bba1fb60adf623f493e9d
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/119092
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Base-Tests: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Tested-by: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Reviewed-by: Jerin Jacob Kollanukkaran <jerinj@marvell.com>

--- a/marvell-ci/test/cnxk-tests/common/meson.build
+++ b/marvell-ci/test/cnxk-tests/common/meson.build
@@ -6,7 +6,8 @@ if not get_option('tests')
 endif
 
 # This executable is used as a workaround to make sure that the exe_wrapper gets
-# called for scripts also. In the exe_wrapper, this executable is ignored.
+# called for scripts also. In the exe_wrapper, this executable is ignored. Note
+# that the cnxk_test_dep_objs is inherited from app/test/meson.build.
 cnxk_test_script_wrapper = executable(
     'cnxk-test-script-wrapper',
     files('cnxk_test_script_wrapper.c'),
