--- a/marvell-ci/test/env/cn10k.env
+++ b/marvell-ci/test/env/cn10k.env
@@ -75,6 +75,7 @@ STATUS_OUTFILE=${STATUS_OUTFILE:-}
 TM_SETUP=${TM_SETUP:-}
 
 FIXME_SKIP_TESTS="
+	cnxk_tm_test
 "
 
 DEFAULT_SKIP_TESTS="
@@ -216,6 +217,7 @@ DEFAULT_SKIP_TESTS="
 	rawdev_autotest
 	telemetry_all
 	cnxk_mac_test
+	cnxk_ingress_policer
 	${FIXME_SKIP_TESTS}
 "
 
