--- a/marvell-ci/test/env/cn9k-nightly.env
+++ b/marvell-ci/test/env/cn9k-nightly.env
@@ -49,6 +49,7 @@ DEFAULT_SKIP_TESTS="
 	cnxk_multi_pool_pkt_tx_scalar
 	cnxk_multi_mempool
 	cnxk_hwpool_tests
+	cnxk_ingress_policer
 	${FIXME_SKIP_TESTS}
 "
 
