--- a/marvell-ci/test/cnxk-tests/meson.build
+++ b/marvell-ci/test/cnxk-tests/meson.build
@@ -98,6 +98,7 @@ test_subdirs_arm = [
         'multi_mempool',
         'ipsec_msns',
         'hwpool',
+        'policer_test',
         'flow_aging',
 ]
 
