--- a/marvell-ci/test/cnxk-tests/meson.build
+++ b/marvell-ci/test/cnxk-tests/meson.build
@@ -6,8 +6,10 @@ if not get_option('tests')
 endif
 
 cnxk_test_deps = [
+        'acl',
         'cmdline',
         'eventdev',
+        'fib',
         'graph',
         'ipsec',
         'net_ring',
