--- a/marvell-ci/test/env/cn10k-b0.env
+++ b/marvell-ci/test/env/cn10k-b0.env
@@ -1,14 +1,11 @@
 #!/bin/bash
 
 # SPDX-License-Identifier: BSD-3-Clause
-# Copyright (C) 2023 Marvell.
+# Copyright (C) 2024 Marvell.
 
 source $PROJECT_ROOT/marvell-ci/test/env/cn10k.env
 
-RUN_TESTS="
-	cnxk_dpdk_event_tests
-	cryptodev_cnxk_autotest
-"
+RUN_TESTS="cryptodev_cnxk_autotest"
 
 # Export the path to this conf so that other scripts can source this conf.
-export TEST_ENV_CONF=$PROJECT_ROOT/marvell-ci/test/env/cn10k-a0.env
+export TEST_ENV_CONF=$PROJECT_ROOT/marvell-ci/test/env/cn10k-b0.env
