ci: added test cases to 103XX board
Added

cnxk_hotplug_test
cnxk_cman_test_config
cnxk_tx_vlan
cnxk_txrx_stats
cnxk_rx_chksum
cnxk_read_config
cnxk_ingress_policer

testcases to ci for 103XX board

Signed-off-by: Rakesh Kudurumalla <rkudurumalla@marvell.com>
Change-Id: I2bae52fb9c854942f4423a5feb6161e4ce8c21c2
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/120023
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Reviewed-by: Nithin Kumar Dabilpuram <ndabilpuram@marvell.com>
Reviewed-by: Jerin Jacob <jerinj@marvell.com>
Tested-by: Jerin Jacob <jerinj@marvell.com>

--- a/marvell-ci/test/env/cn103.env
+++ b/marvell-ci/test/env/cn103.env
@@ -8,6 +8,14 @@ source $PROJECT_ROOT/marvell-ci/test/env/cn10k.env
 RUN_TESTS="
 	inline_macsec_autotest
 	cnxk_macsec_inline_perf
+	cnxk_hotplug_test
+	cnxk_cman_test_config
+	cnxk_tx_vlan
+	cnxk_txrx_stats
+	cnxk_rx_chksum
+	cnxk_read_config
+	cnxk_ingress_policer
+	flow_regression
 "
 
 # Update command timeout
