marvell-ci: enable multi seg and checksum tests
Enable multi seg and checksum tests in CI debug build tests.

Signed-off-by: Rahul Bhansali <rbhansali@marvell.com>
Change-Id: I39e6b4a6226280fef06a338f1b5e84dd1128f41c
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/120695
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Base-Tests: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Tested-by: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Reviewed-by: Jerin Jacob <jerinj@marvell.com>

--- a/marvell-ci/test/env/cn10k-debug.env
+++ b/marvell-ci/test/env/cn10k-debug.env
@@ -8,6 +8,9 @@ source $PROJECT_ROOT/marvell-ci/test/env/cn10k.env
 RUN_TESTS="
 	mbuf_autotest
 	mempool_autotest
+	cnxk_tx_chksum
+	cnxk_mseg_tx_chksum
+	cnxk_rx_chksum
 "
 
 # Export the path to this conf so that other scripts can source this conf.
