ci: added test cases to 103XX board
Added

cnxk_dpdk_config_test
cnxk_fc_test_config
cnxk_tx_vlan
cnxk_txrx_stats
cnxk_mtr_test_config
cnxk_tx_chksum
trace_cnxk_autotest
cnxk_sample_script
cnxk_l2fwd_simple
cnxk_tm_test
cnxk_port_ctrl
cnxk_fwd_perf

testcases to ci for 103XX board

Signed-off-by: Rakesh Kudurumalla <rkudurumalla@marvell.com>
Change-Id: I7e93c3d5b138241cdbc37c4d973e0bd6af2c78e0
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/122642
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Reviewed-by: Jerin Jacob <jerinj@marvell.com>
Tested-by: Jerin Jacob <jerinj@marvell.com>

--- a/marvell-ci/test/cnxk-tests/common/testpmd/common.env
+++ b/marvell-ci/test/cnxk-tests/common/testpmd/common.env
@@ -122,6 +122,7 @@ function testpmd_port_stats()
 	local out=testpmd.out.$prefix
 
 	echo "show port stats $port" >> $in
+	sleep 0.5
 	testpmd_prompt $prefix
 	cat $out | tail -n10 | head -n4
 }
