--- a/marvell-ci/test/env/cn103.env
+++ b/marvell-ci/test/env/cn103.env
@@ -16,6 +16,18 @@ RUN_TESTS="
 	cnxk_read_config
 	cnxk_ingress_policer
 	flow_regression
+	cnxk_dpdk_config_test
+	cnxk_fc_test_config
+	cnxk_tx_vlan
+	cnxk_txrx_stats
+	cnxk_mtr_test_config
+	cnxk_tx_chksum
+	trace_cnxk_autotest
+	cnxk_sample_script
+	cnxk_l2fwd_simple
+	cnxk_tm_test
+	cnxk_port_ctrl
+	cnxk_fwd_perf
 "
 
 # Update command timeout
