--- a/config/arm/meson.build
+++ b/config/arm/meson.build
@@ -140,7 +140,7 @@ implementer_cavium = {
         },
         '0xa3': {
             'march': 'armv8-a',
-            'march_features': ['crc'],
+            'march_features': ['crc', 'crypto'],
             'mcpu': 'thunderxt83',
             'flags': flags_part_number_thunderx
         },
