cnxk-tests/ipsec_msns: add new test modes
Adds testmode to create multiple SAs, as well as
handling soft expiry scenarios. In this mode,
the application would automatically destroy and
recreate an SA when a soft expiry is reported for
that specific SA. To enable this functionality,
use the following command-line parameters:
"--testmode 2 --softexp-ena --num-sas <count> --softlimit <count>"

Test modes
0: IPSEC_MSNS
1: EVENT_IPSEC_INBOUND_MSNS_PERF
2: EVENT_IPSEC_INBOUND_PERF
3: EVENT_IPSEC_INB_OUTB_PERF
4: EVENT_IPSEC_INB_LAOUTB_PERF

Signed-off-by: Srujana Challa <schalla@marvell.com>
Change-Id: Icf8b7c71bd93bc31581ad73f19d4cf11eba18005
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/126021
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Base-Tests: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Tested-by: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Reviewed-by: Nithin Kumar Dabilpuram <ndabilpuram@marvell.com>

--- a/marvell-ci/test/cnxk-tests/ipsec_msns/meson.build
+++ b/marvell-ci/test/cnxk-tests/ipsec_msns/meson.build
@@ -16,6 +16,16 @@ test_dir = meson.current_build_dir()
 # Test executable
 test_exec='cnxk_ipsec_msns'
 
+if meson.is_cross_build()
+        soc_type = meson.get_cross_property('platform', '')
+else
+        soc_type = platform
+endif
+
+if soc_type == 'cn9k'
+        cflags += ['-DMSNS_CN9K']
+endif
+
 # Copy the required scripts to build directory.
 run_command(copy_data, test_script)
 
