--- a/marvell-ci/test/cnxk-tests/common/testpmd/common.env
+++ b/marvell-ci/test/cnxk-tests/common/testpmd/common.env
@@ -48,11 +48,19 @@ function testpmd_prompt()
 		cmd="tail -c +$skip_bytes $out"
 	fi
 
+	start_ts=`date +%s`
+	start_ts=$((start_ts + 60))
 	while ! ($cmd | grep -q "^testpmd> $"); do
 		if [ "$refresh" == "yes" ]
 		then
 			sleep 0.01
 			echo "" >>$in
+		fi
+		#Link change may break this logic, timeout loop to continue again
+		ts=`date +%s`
+		if (( $ts > $start_ts ))
+		then
+			break;
 		fi
 		continue;
 	done
