ci: added test cases to 103XX board
Added

cnxk_ipsec_msns
cnxk_ipsec_loopback
cnxk_ipsec_perf

testcases to ci for 103XX board

Signed-off-by: Rakesh Kudurumalla <rkudurumalla@marvell.com>
Change-Id: I6117ea88779743a16f57a2b1dc7891e37da05e3a
Reviewed-on: https://sj1git1.cavium.com/c/IP/SW/dataplane/dpdk/+/128755
Reviewed-by: Nithin Kumar Dabilpuram <ndabilpuram@marvell.com>
Base-Builds: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>
Tested-by: sa_ip-toolkits-Jenkins <sa_ip-toolkits-jenkins@marvell.com>

--- a/marvell-ci/test/cnxk-tests/ipsec_perf/meson.build
+++ b/marvell-ci/test/cnxk-tests/ipsec_perf/meson.build
@@ -64,6 +64,16 @@ run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.106xx.ip_p.outb')
 run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.106xx.ip_p.inb')
 run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.106xx.ip_p_ss.outb')
 run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.106xx.ip_p_ss.inb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip.outb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip.inb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_ev.outb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_ev.inb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_ev_ss.outb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_ev_ss.inb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_p.outb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_p.inb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_p_ss.outb')
+run_command(copy_data, 'ref_numbers/cn10k/rclk2500_sclk1100.103xx.ip_p_ss.inb')
 run_command(copy_data, 'pcap/enc_aes-cbc_sha1-hmac_64.pcap')
 run_command(copy_data, 'pcap/enc_aes-cbc_sha1-hmac_380.pcap')
 run_command(copy_data, 'pcap/enc_aes-cbc_sha1-hmac_1410.pcap')
